chore(handler): switch to Math.clamp